@@ -9,7 +9,7 @@
 	<groupId>io.github.kostaskougios</groupId>
 	<artifactId>cloning</artifactId>
 	<packaging>bundle</packaging>
-	<version>1.11.0</version>
+	<version>1.12.0</version>
 	<name>cloning</name>
 	<url>https://github.com/kostaskougios/cloning/</url>
 	<description><![CDATA[
@@ -55,9 +55,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
 					<includes>
 						<include>**/Test*.java</include>
 					</includes>
